Fix mobile nav and service badge gap

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -87,7 +87,7 @@ html {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: 4rem 0;
 }
 
 .page-section .page-section-heading {
@@ -222,8 +222,8 @@ html {
 }
 
 .masthead {
-  padding-top: calc(6rem + 74px);
-  padding-bottom: 6rem;
+  padding-top: calc(4rem + 74px);
+  padding-bottom: 4rem;
 }
 
 .masthead .masthead-heading {
@@ -251,8 +251,8 @@ html {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
-    padding-bottom: 6rem;
+    padding-top: calc(4rem + 104px);
+    padding-bottom: 4rem;
   }
 
   .masthead .masthead-heading {
